<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search_all"
            android:checked="true"
            android:onClick="onStufeselected"
            android:title="@string/all" />
        <item
            android:id="@+id/search_woelflinge"
            android:onClick="onStufeselected"
            android:title="@string/woelflinge" />
        <item
            android:id="@+id/search_jungpfadfinder"
            android:onClick="onStufeselected"
            android:title="@string/jungpfadfinder" />
        <item
            android:id="@+id/search_pfadfinder"
            android:onClick="onStufeselected"
            android:title="@string/pfadfinder" />
        <item
            android:id="@+id/search_rover"
            android:onClick="onStufeselected"
            android:title="@string/rover" />
    </group>

</menu>